--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.icons > i {
+  display: inline-block !important;
+}
